# project-askly

./: .env.example  .flake8  .gitignore  COMANDOS.md  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run.py  update_areas.py
app/: __init__.py  models.py
app/ext/db/: __init__.py
app/models/: __init__.py  category.py  commentary.py  history.py  ticket.py  user.py
app/routes/: main.py
app/static/css/: design-tokens.css
app/templates/api/: swagger.html
app/templates/auth/: cadastro.html  login.html
app/templates/errors/: 401.html  403.html  500.html
app/templates/layouts/: base.html
app/templates/tickets/: detalhe.html
config/: __init__.py  env_validator.py  settings.py
frontend/static/css/: app.css
frontend/static/js/: page-transition.js
frontend/templates/admin/: categorias.html  usuarios.html
frontend/templates/auth/: cadastro.html  login.html  perfil.html
frontend/templates/errors/: 400.html  404.html  500.html
frontend/templates/layouts/: app.html  auth.html  base.html
frontend/templates/tickets/: detalhe.html  listar.html  novo.html
migrations/versions/: 5035267b7a75_add_categoria_id_to_usuario.py  e728badb6240_.py
src/: __init__.py
src/application/: __init__.py
src/application/dtos/: __init__.py  categoria_dto.py  chamado_dto.py  comentario_dto.py  usuario_dto.py
src/application/use_cases/: __init__.py
src/application/use_cases/auth/: __init__.py  login.py  register.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  base.py  categoria.py  chamado.py  comentario.py  historico_status.py  usuario.py
src/domain/enums/: __init__.py  perfil.py  prioridade.py  status.py
src/domain/exceptions/: __init__.py  base.py  ticket.py  user.py
src/domain/value_objects/: __init__.py  email.py  pagination.py  senha.py
src/infrastructure/: __init__.py
src/infrastructure/security/: __init__.py  decorators.py  password_hasher.py  token_service.py
src/presentation/: __init__.py  app_factory.py  utils.py
src/presentation/api/: __init__.py  api_auth.py
tests/: conftest.py
tests/fixtures/: factories.py
tests/integration/api/: test_auth_api.py  test_tickets_api.py
tests/unit/application/: test_admin_use_cases.py  test_register_use_case.py  test_ticket_use_cases.py  test_use_cases.py
tests/unit/domain/: test_chamado_reopen.py  test_entities.py  test_value_objects.py
(+54 files in other folders)
