[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Askly"
version = "0.1.0"
description = "A web platform for managing orders and internal operations for small and medium-sized businesses."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "Davi Dias D'Avila", email = "dddavila.dev@gmail.com"},
    {name = "Matheus Braga de Carvalho", email = "matheusbc1234@gmail.com"},
    {name = "Nicolas Ramos Carreira", email = "nicolascarreira2005@gmail.com"}
]
dependencies = [
    "Flask>=3.0,<4.0",
    "Werkzeug>=3.0",
    "Flask-SQLAlchemy>=3.1",
    "SQLAlchemy>=2.0",
    "psycopg2-binary>=2.9",
    "Flask-Migrate>=4.0",
    "alembic>=1.13",
    "Flask-Login>=0.6",
    "PyJWT>=2.8",
    "flask-restx>=1.3",
    "flask-cors>=4.0",
    "Flask-WTF>=1.2",
    "WTForms>=3.1",
    "email-validator>=2.0",
    "pydantic>=2.5",
    "Flask-Talisman>=1.1",
    "Flask-Limiter>=3.5",
    "bcrypt>=4.1",
    "python-dotenv>=1.0",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "isort>=5.13",
    "flake8>=7.0",
    "mypy>=1.8",
    "pre-commit>=3.6",
    "types-python-dateutil>=2.8",
    "flask-debugtoolbar >= 0.15",
]
test = [
    "pytest>=8.0",
    "pytest-flask>=1.3",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "factory-boy>=3.3",
    "faker>=22.0",
    "httpx>=0.26"
]


[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | migrations
    | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".venv", "migrations"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["migrations", ".venv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
namespaces = true 
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
"*" = ["*.html", "*.css", "*.js", "*.json", "*.png", "*.jpg"]
"views" = ["templates/*", "static/*"]

[tool.askly]
display_name = "Askly"
company = "Askly INC"